# webxdcbot

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-ci.yml
frontend/: index.html  main.js  vite.config.js
webxdcbot/: __init__.py  app.py
