[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
version = "0.1.0"
name = "webxdcbot"
description = "Example Delta Chat bot + webxdc app"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["deltachat", "bot"]
authors = [
  {name = "adbenitez", email = "adbenitez@hispanilandia.net"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
dependencies = [
    "deltabot-cli",
    "fortune-python",
]

[project.optional-dependencies]
dev = [
  "black",
  "mypy",
  "isort",
  "pylint",
  "pylama",
  "pytest",
]

[project.scripts]
webxdcbot = "webxdcbot:main"

[tool.setuptools]
packages = [ "webxdcbot" ]
zip-safe = false
include-package-data = true


[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = "True"
