[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
version = "0.2.0"
name = "webxdcbot"
description = "Example Delta Chat bot + webxdc app"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["deltachat", "bot", "webxdc"]
authors = [
  {name = "adbenitez", email = "adbenitez@merlinux.eu"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
dependencies = [
    "deltabot-cli>=1.0.0",
    "fortune-python",
]

[project.optional-dependencies]
dev = [
  "black",
  "mypy",
  "isort",
  "pylint",
  "pylama",
  "pytest",
]

[project.scripts]
webxdcbot = "webxdcbot:main"

[tool.setuptools]
packages = [ "webxdcbot" ]
zip-safe = false
include-package-data = true


[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = "True"
