[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "webxdcbot"
description = "Example Delta Chat bot + webxdc app"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["deltachat", "bot", "webxdc"]
authors = [
  {name = "adbenitez", email = "adb@merlinux.eu"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
dependencies = [
    "deltabot-cli>=3.0.0,<4.0",
    "fortune-python",
]

[project.optional-dependencies]
dev = [
  "black",
  "mypy",
  "isort",
  "pylint",
  "pylama",
  "pytest",
]

[project.scripts]
webxdcbot = "webxdcbot:main"

[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools_scm

[tool.setuptools]
packages = [ "webxdcbot" ]
zip-safe = false
include-package-data = true


[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = "True"
